--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<!--start-header-section-->
 			<div class="header-section">
 				<div class="continer">
-					<img src="images/p1.png">
+					<img src="images/p2.png">
 						<h1>hello..<span>!</span></h1>
 							<p>My name is Web & i do Creative Bots</p>
 							<a href="#contact" class="scroll top"><span class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span></a>
@@ -167,18 +167,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="footer-section">
 						<div class="container">
 							<div class="footer-top">
-						<p>Copyright &copy; 2015.Company name All rights reserved.More Templates <a href="http://www.cssmoban.com/" target="_blank" title="模板之家">模板之家</a> - Collect from <a href="http://www.cssmoban.com/" title="网页模板" target="_blank">网页模板</a></p>
+						<p>Copyright &copy; 2017.canron7 name All rights reserved 
+						<a href="http://www.cssmoban.com/" target="_blank" title="微信联系">微信联系</a> - Collect from 
+						<a href="http://www.cssmoban.com/" title="关注微博" target="_blank">关注微博</a>
+						</p>
 									</div>
 							<script type="text/javascript">
 						$(document).ready(function() {
-							/*
-							var defaults = {
-					  			containerID: 'toTop', // fading element id
-								containerHoverID: 'toTopHover', // fading element hover id
-								scrollSpeed: 1200,
-								easingType: 'linear' 
-					 		};
-							*/
 							
 							$().UItoTop({ easingType: 'easeOutQuart' });
 							
