--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>Home</title>
+<title>Canrom7.Home</title>
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all">
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -84,7 +84,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 			</div>
 			<!--end study-section-->
-            <div class="copyrights">Collect from <a href="http://www.cssmoban.com/" >企业网站模板</a></div>
+            <div class="copyrights">Collect from <a href="http://www.cssmoban.com/" >canrom7</a></div>
 			<!--start-services-section-->
 			<div class="service-section" id="service">
 				<div class="container">
@@ -168,8 +168,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<div class="container">
 							<div class="footer-top">
 						<p>Copyright &copy; 2017.canron7 name All rights reserved 
-						<a href="http://www.cssmoban.com/" target="_blank" title="微信联系">微信联系</a> - Collect from 
-						<a href="http://www.cssmoban.com/" title="关注微博" target="_blank">关注微博</a>
+						<a href="https://raw.githubusercontent.com/canrom7/canrom7.github.io/master/images/weixin.jpg" target="_blank" title="微信联系">微信联系</a> - Collect from 
+						<a href="http://weibo.com/u/1947907272" title="关注微博" target="_blank">关注微博</a>
 						</p>
 									</div>
 							<script type="text/javascript">
