--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Canrom7.Home</title>
+<link rel="icon" type="image/png" href="https://raw.githubusercontent.com/canrom7/canrom7.github.io/master/images/p2.png">
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all">
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
