--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>Canrom7.Home</title>
+<title>Canrom7</title>
 <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/canrom7/canrom7.github.io/master/images/p2.png">
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all">
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
